fix(ai-banner): fix the overlap when resising (#6993)

--- a/src/pages/common/components/AIBanner/AIBanner.less
+++ b/src/pages/common/components/AIBanner/AIBanner.less
@@ -58,6 +58,7 @@
         flex: 1;
         display: flex;
         flex-direction: column;
+        overflow: auto;
         gap: @layout-spacing-xs;
 
         :global {
